# nonlinear

./: .hlint.yaml  CHANGELOG.md  README.md  cabal.project  flake.nix  hie.yaml  nonlinear.cabal
.github/workflows/: CI.yaml
nonlinear/: README.md  nonlinear.cabal
nonlinear/src/: Nonlinear.hs
nonlinear/src/Nonlinear/: V1.hs  V2.hs  V3.hs  V4.hs
src/: Nonlinear.hs
src/Nonlinear/: Distributive.hs  Internal.hs  Matrix.hs  Projection.hs  Quaternion.hs  Representable.hs  V1.hs  V2.hs  V3.hs  V4.hs  Vector.hs
src/Nonlinear/Projective/: Hom2.hs  Hom3.hs
test/: Spec.hs
