name:               nonlinear
version:            0
author:             Jonas Carpay
maintainer:         jonas@cross-compass.com
copyright:          2020 Cross Compass Ltd
category:           Web
build-type:         Simple
cabal-version:      >=1.10
extra-source-files: README.md
license:            BSD3

library
  exposed-modules:
    Nonlinear
    Nonlinear.Distributive
    Nonlinear.Matrix
    Nonlinear.Representable
    Nonlinear.V1
    Nonlinear.V2
    Nonlinear.V3
    Nonlinear.V4
    Nonlinear.Vector

  default-language: Haskell2010
  hs-source-dirs:   src
  build-depends:
      base
    , microlens
    , transformers
    , vector

  ghc-options:      -Wall -Wno-name-shadowing -haddock
