name:               nonlinear
version:            0
author:             Jonas Carpay
maintainer:         jonas@cross-compass.com
copyright:          2020 Cross Compass Ltd
category:           Web
build-type:         Simple
cabal-version:      >=1.10
extra-source-files: README.md
license:            BSD3

library
  other-modules:    Nonlinear.Internal
  exposed-modules:
    Nonlinear
    Nonlinear.Matrix
    Nonlinear.Projective.Hom3
    Nonlinear.Quaternion
    Nonlinear.V1
    Nonlinear.V2
    Nonlinear.V3
    Nonlinear.V4
    Nonlinear.Vector

  default-language: Haskell2010
  hs-source-dirs:   src
  build-depends:    base
  ghc-options:      -Wall -Wno-name-shadowing -haddock

test-suite test
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Spec.hs
  build-depends:
      base
    , hspec
    , HUnit
    , nonlinear
    , QuickCheck

  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
